<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#228B22" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textStyle="bold"
        style="@style/WhiteOnGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button3"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F0F0F0"
            android:onClick="decrement"
            android:text="-"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/quantity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  1  " />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F0F0F0"
            android:onClick="increment"
            android:text="+"
            android:textStyle="bold"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/packings"
        style="@style/WhiteOnGreen"/>

    <CheckBox
        android:id="@+id/bag_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bag" />

    <CheckBox
        android:id="@+id/box_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        style="@style/WhiteOnGreen"/>

    <TextView
        android:id="@+id/price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_price"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#F0F0F0"
        android:onClick="submit"
        android:text="@string/order"
        android:textColor="#000000"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shucai2"
        android:scaleType="centerCrop"/>

</LinearLayout>